fixed try it whitespaces

--- a/recipes/output/precalculus.css
+++ b/recipes/output/precalculus.css
@@ -940,24 +940,18 @@
   class: os-number;
   move-to: bNoteLabel-try; }
 
-:pass(3) [data-type="note"].try::before {
-  container: span;
-  content: " ";
-  class: os-divider;
-  move-to: bNoteLabel-try; }
-
 :pass(3) [data-type="note"].try > [data-type="title"] {
   move-to: trash; }
 
 :pass(3) [data-type="note"].try [data-type="solution"]::before {
   container: span;
-  content: counter(try);
-  class: os-number; }
+  content: ". ";
+  class: os-divider; }
 
 :pass(3) [data-type="note"].try [data-type="solution"]::before {
   container: span;
-  content: " ";
-  class: os-divider; }
+  content: counter(try);
+  class: os-number; }
 
 :pass(3) [data-type="note"].try::after {
   container: div;
